--- a/bibliography.html
+++ b/bibliography.html
@@ -43,7 +43,11 @@
             <br><br>
             Horton, Katharine. “Scavenging for Clues of Our Past.” <em>College of Liberal Arts Magazine</em>, 19 Nov. 2019, <a href="magazine.libarts.colostate.edu/article/scavenging-for-clues-of-our-past" target="_blank">magazine.libarts.colostate.edu/article/scavenging-for-clues-of-our-past</a>.
             <br><br>
-            <em>HWKEE</em>. <a href="www.olduvai-gorge.org/hwkee.html" target="_blank">www.olduvai-gorge.org/hwkee.html</a>. Accessed 8 Oct. 2022.
+            "HWKEE." <em>Olduvai Geochronology and Archaeology Project</em>, 2015, <a href="www.olduvai-gorge.org/hwkee.html" target="_blank">www.olduvai-gorge.org/hwkee.html</a>. Accessed 8 Oct. 2022.
+            <br><br>
+            Lewin, Roger. “The Old Man of Olduvai Gorge.” <em>Smithsonian Magazine</em>, 1 Oct. 2002, <a href="www.smithsonianmag.com/history/the-old-man-of-olduvai-gorge-69246530" target="_blank">www.smithsonianmag.com/history/the-old-man-of-olduvai-gorge-69246530</a>.
+            <br><br>
+            Potts, Richard, and Pat Shipman. “Cutmarks Made by Stone Tools on Bones From Olduvai Gorge, Tanzania.” <em>Nature</em>, vol. 291, June 1981, pp. 577–80. <a href="www.nature.com/articles/291577a0" target="_blank">www.nature.com/articles/291577a0</a>.
             <br><br>
             Special Travel International. “OLDUVAI GORGE Oldest Evidence of Mankind’s Evolution and a Reminder That We Are All One Family.” <em>Special Travel International</em>, <a href="www.sticanada.com/blog/olduvai-gorge" target="_blank">www.sticanada.com/blog/olduvai-gorge</a>. Accessed 8 Oct. 2022.
             <br><br>
